Add palettes and examples

--- a/README.Rmd
+++ b/README.Rmd
@@ -34,17 +34,19 @@ You can install the development version from [GitHub](https://github.com/) with:
 # install.packages("devtools")
 devtools::install_github("ideas42/tools42")
 ```
-## Example
+## Example: plots
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example which shows you how to solve a common problem: plotting a histogram.
 
 ```{r example, dpi=300}
+
 library(tools42)
 ## basic example code
 
 viz_hist(iris, "Sepal.Width")
 
 ```
+## Example: themes
 
 Let's try using our theme now:
 
@@ -59,3 +61,25 @@ ggplot(iris, aes(Sepal.Width, Sepal.Length)) +
 
 ```
 
+## Example: palettes 
+
+Now, let's color it with one of our palettes. First we can take a look at the palette separately.
+
+```{r example3, dpi=300, fig.asp=0.4}
+
+palette_42("i42")
+
+```
+
+Then we plot the same chart and add our colors.
+
+```{r example4, dpi=300}
+
+ggplot(iris, aes(Sepal.Width, Sepal.Length, color = Species)) + 
+  geom_point() +
+  labs(title = "This is a sample plot",
+       subtitle = "And this is the subtitle") +
+  theme_42() +
+  scale_color_manual(values = palette_42("i42"))
+
+```
