Add more themes

--- a/README.Rmd
+++ b/README.Rmd
@@ -62,6 +62,16 @@ ggplot(iris, aes(Sepal.Width, Sepal.Length)) +
 
 ```
 
+```{r example2b, dpi=300}
+
+ggplot(iris, aes(Sepal.Width, Sepal.Length)) + 
+  geom_point() +
+  labs(title = "This is a sample plot",
+       subtitle = "And this is the subtitle") +
+  theme_42_bright()
+
+```
+
 ## Example: palettes 
 
 Now, let's color it with one of our palettes. First we can take a look at the palette separately.
@@ -80,7 +90,9 @@ ggplot(iris, aes(Sepal.Width, Sepal.Length, color = Species)) +
   geom_point() +
   labs(title = "This is a sample plot",
        subtitle = "And this is the subtitle") +
-  theme_42() +
-  scale_color_manual(values = palette_42("i42"))
+  theme_42_bright() +
+  scale_color_manual(values = palette_42("i42_bright"))
 
 ```
+
+
